--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,12 @@ nav li {
   display: inline-block;
   margin: 10px;
 }
+
+form label {
+  display: block;
+  margin: 10px;
+}
+
+form input {
+  margin: 10px;
+}
